components/entry/entry.module.css
.grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-gap: 1rem;
}

.grid > .link {
  margin: 0;
}

.link {
  width: 100%;
  display: block;
  text-decoration: none;
  outline: none;
  margin-bottom: var(--gap-double);
}

.link > section {
  position: relative;
  height: calc(3.5 * var(--big-gap));
  object-fit: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: var(--lighter-gray);
  border-radius: var(--radius);
  overflow: hidden;
}

.link > section::before {
  content: '';
  pointer-events: none;
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: var(--radius);
  background: radial-gradient(
    circle at center,
    white 10%,
    whitesmoke 11%,
    whitesmoke 100%
  );
  z-index: -1;
}

.link > section::after {
  content: '';
  pointer-events: none;
  position: absolute;
  z-index: 1;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0.3;
  border-radius: var(--radius);
  background: linear-gradient(
    to bottom left,
    rgba(0, 0, 0, 0.1) 20%,
    rgba(0, 0, 0, 0.6) 100%
  );
  background: linear-gradient(
    23deg,
    hsla(0, 0%, 0%, 0.69) 0%,
    hsla(0, 0%, 0%, 0.686) 8.1%,
    hsla(0, 0%, 0%, 0.676) 15.5%,
    hsla(0, 0%, 0%, 0.661) 22.5%,
    hsla(0, 0%, 0%, 0.641) 29%,
    hsla(0, 0%, 0%, 0.617) 35.3%,
    hsla(0, 0%, 0%, 0.591) 41.2%,
    hsla(0, 0%, 0%, 0.564) 47.1%,
    hsla(0, 0%, 0%, 0.536) 52.9%,
    hsla(0, 0%, 0%, 0.509) 58.8%,
    hsla(0, 0%, 0%, 0.483) 64.7%,
    hsla(0, 0%, 0%, 0.459) 71%,
    hsla(0, 0%, 0%, 0.439) 77.5%,
    hsla(0, 0%, 0%, 0.424) 84.5%,
    hsla(0, 0%, 0%, 0.414) 91.9%,
    hsla(0, 0%, 0%, 0.41) 100%
  );
  transition: opacity var(--transition-slow), transform var(--transition-slow);
}

.link:hover > section::after,
.link:focus > section::after,
.link.active > section::after {
  opacity: 1;
}

.grid .link div {
  bottom: 1rem;
  left: 1rem;
}

.link div {
  position: absolute;
  bottom: 2rem;
  left: 2rem;
  z-index: 2;
  opacity: 0;
  transform: translateY(10%);
  transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
}

.link:hover div,
.link:focus div,
.link.active div {
  transform: none;
  opacity: 1;
}

.title,
.description {
  margin: 0;
  line-height: normal;
}

.grid .description,
.grid .title {
  font-size: 0.8rem;
  overflow: hidden;
}

.title {
  color: #fff;
  font-size: 2rem;
  font-weight: bold;
  margin-bottom: var(--gap);
}

.description {
  font-weight: 500;
  color: #eaeaea;
}

@media (hover: none) {
  .link div {
    transform: none;
    opacity: 1;
  }

  .link > section::after {
    opacity: 1;
  }
}

